--- a/DigitalResume/Style.css
+++ b/DigitalResume/Style.css
@@ -11,6 +11,9 @@
     max-width: 10px;
     max-block-size: 10pxs;
 }
+.mouse:hover{
+    background-color: aliceblue;
+}
 
 /* Id's */
 #profileImg{
